接收其他用户消息不全

--- a/Client.vcxproj
+++ b/Client.vcxproj
@@ -140,12 +140,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Address_v4.cpp" />
-    <ClCompile Include="Client.cpp" />
+    <ClCompile Include="Client.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Console.cpp" />
     <ClCompile Include="Socket.cpp" />
+    <ClCompile Include="test.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Address_v4.h" />
+    <ClInclude Include="Console.h" />
     <ClInclude Include="Socket.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
